fix(OutputDisplay.jsx) close animation when height overflowing

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -99,6 +99,8 @@
   float: left; 
 
   display: flex;
+
+  border: 8px solid #E8E4E4;
 }  
 
 .content-container-closing-overflow {
