--- a/src/components/parts/OutputDisplay.css
+++ b/src/components/parts/OutputDisplay.css
@@ -1,7 +1,7 @@
 .output-display { 
 	width: 100%;
 	background: #C4C4C4;
-	border: 0.5em solid #E8E4E4;
+	/*border: 0.5em solid #E8E4E4;*/
 	z-index: 1000;
 	box-sizing: border-box; 
 	overflow: hidden;
